# 3d-geometry-toolkit

./: .gitignore  README.md
3d_line_plane_intersection/: CMakeLists.txt
3d_line_plane_intersection/include/: 3dlineplaneintersection.h
3d_line_plane_intersection/src/: 3dlineplaneintersection.cpp  test.cpp
3d_lines_intersection/: CMakeLists.txt
3d_lines_intersection/include/: 3dlinesintersection.h  drawline.h  drawsphere.h
3d_lines_intersection/src/: 3dlinesintersection.cpp  drawline.cpp  drawsphere.cpp  main.cpp  test.cpp
